--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 		<meta charset="UTF-8">
-		<title>First anniversary of love</title>
+		<title>Third anniversary of our love</title>
 		<link rel="stylesheet" type="text/css" href="./css/format.css">
 	</head>
 
@@ -25,13 +25,14 @@
 			</div>
 		</div>
 		<div id="content">
-			<h2 id="together">We have been together</h2>
+			<h2 id="together">We have been together for</h2>
 			<div id="timer">
 				<b id="d"></b> Days 
 				<b id="h"></b> Hours
 				<b id="m"></b> Minutes
 				<b id="s"></b> Seconds
 			</div>
+			<h2 id="together">Love u so much maa🩷🩷</h2>
 		</div>
 
     	<div id = "typeDiv">
@@ -49,7 +50,7 @@
 			var imageIndex = 0;
 			var txtArray = ["Your first birthday celebrated together:June 10",
 			 "Our first day out:June 18","My fisrt birthday that we celebrated together and our first 😘:July 9", "Our first day bike ride:September 4", "We went for movie:October 16", "Went for Chennai:March 24",
-			 "You made a big surprise for my birthday:June 28", "Went out to chennai:September 3","I need our hands to be holded forever"];
+			 "You made a big surprise for my birthday:June 28", "Went out to chennai:September 3","I need our hands to be holded forever like this..."];
 			 var len = imageArray.length;
 			var t = 0;
 		</script>
