--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
 				<b id="m"></b> Minutes
 				<b id="s"></b> Seconds
 			</div>
-			<h2 id="together">Love u so much maa🩷🩷</h2>
-			<h2 id="together">Happy Love Anniversary chellam🩷😘</h2>
+			<h2 id="together">Love u so much maa🩷😘</h2>
 		</div>
 
     	<div id = "typeDiv">
